<resources>
    <string name="app_name">Prueba1</string>
    <string name="text_welcome">Bienvenido</string>
    <string name="text_user">Usuario</string>
    <string name="text_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="text_register_title">Registro de Usuario</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_register_password">Contraseña</string>
    <string name="btn_register">Registrarse</string>
    <string name="text_permissions">Permisos de la aplicación</string>
    <string name="chk_accept_permissions">Acepto los permisos necesarios</string>
    <string name="text_rating">Califica tu experiencia inicial</string>
    <string name="btn_continue">Continuar</string>
</resources>