<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_welcome"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/txt_permissions_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_permissions"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chk_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chk_accept_permissions"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/txt_rating_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_rating"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>