<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserActivity">

    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register_title"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_name" />

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_register_password"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="128dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/btn_register" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>